--- a/NWScript-Obfuscator/NWScript-Obfuscator.csproj
+++ b/NWScript-Obfuscator/NWScript-Obfuscator.csproj
@@ -46,15 +46,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="F_Main.cs">
+    <Compile Include="Forms\F_Main.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="F_Main.Designer.cs">
+    <Compile Include="Forms\F_Main.Designer.cs">
       <DependentUpon>F_Main.cs</DependentUpon>
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <EmbeddedResource Include="F_Main.resx">
+    <Compile Include="Services\NWScriptObfuscator.cs" />
+    <EmbeddedResource Include="Forms\F_Main.resx">
       <DependentUpon>F_Main.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
