Moved logic to new proj. Created tests proj. Fixed RemovingWS Func

--- a/NWScript-Obfuscator.UI/NWScript-Obfuscator.UI.csproj
+++ b/NWScript-Obfuscator.UI/NWScript-Obfuscator.UI.csproj
@@ -54,7 +54,6 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\NWScriptObfuscator.cs" />
     <EmbeddedResource Include="Forms\F_Main.resx">
       <DependentUpon>F_Main.cs</DependentUpon>
     </EmbeddedResource>
@@ -79,6 +78,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NWScript_Obfuscator\NWScript_Obfuscator.csproj">
+      <Project>{8fa83464-1018-4298-9ce1-312334526eae}</Project>
+      <Name>NWScript_Obfuscator</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
