--- a/NWScript-Obfuscator.Tests/NWScript-Obfuscator.Tests.csproj
+++ b/NWScript-Obfuscator.Tests/NWScript-Obfuscator.Tests.csproj
@@ -55,6 +55,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\NWScript_Obfuscator\NWScript_Obfuscator.csproj">
+      <Project>{8fa83464-1018-4298-9ce1-312334526eae}</Project>
+      <Name>NWScript_Obfuscator</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
